# vlviz

./: CMakeLists.txt
include/: cameracapturer.h  errors.h  eventhandler.h  log.h  messagefifo.h  messagehandler.h  receiver.h  sender.h  serversocket.h  socket.h
include/codec/: definitions.h  helpers.h  quantizedframe.h  rawframe.h
include/decoder/: decoder.h  decoderevent.h
include/encoder/: encoder.h  encoderevent.h
src/: cameracapturer.cpp  main.cpp  receiver.cpp  sender.cpp  serversocket.cpp  socket.cpp
src/codec/: quantizedframe.cpp
src/decoder/: decoder.cpp
src/encoder/: encoder.cpp
